v1.0 dev-4 {

    - Added migration feature from ConsumeFood 1 to 2 for CustomFood
    - Fixed an issue where some options were not being saved correctly
    - Fixed an issue where Execute Command was executed twice

    Add commands
    - /consumefood2 migrate customfood

    Add permissions
    - consumefood2.command.migrate.customfood

}

v1.0 dev-3 {

    - Added VanillaFood edit gui
    - Added cooldown messages for CustomFood and VanillaFood
    - Removed dependency on NBTAPI and shaded into plugin
    - Fixed an issue where options were not saved when changed via GUI

    Add commands
    - consumefood2 vanillafood edit
    - consumefood2 vanillafood give

    Add permissions
    - consumefood2.command.vanillafood.edit
    - consumefood2.command.vanillafood.give

}

v1.0 dev-2 {

    - Added CustomFood Edit gui

    Add options
    - MaxStackSize (+ 1.20.5)
    - HideAdditionalTooltip (+ 1.20.5)

    Add commands
    - /consumefood2 foodlevel
    - /consumefood2 saturation
    - /consumefood2 customfood edit
    - /consumefood2 customfood create
    - /consumefood2 customfood delete

    Add permissions
    - consumefood2.command.foodlevel.get
    - consumefood2.command.foodlevel.set
    - consumefood2.command.foodlevel.add
    - consumefood2.command.saturation.get
    - consumefood2.command.saturation.set
    - consumefood2.command.saturation.add
    - consumefood2.command.customfood.edit
    - consumefood2.command.customfood.create
    - consumefood2.command.customfood.delete
}